--- a/css/my_works.css
+++ b/css/my_works.css
@@ -1,17 +1,17 @@
-.pages {
+.my-works {
     align-items: center;
     flex-direction: column;
     padding: 16px 0;
 }
-#pages-div-1 {
+#my-works-div-1 {
     padding: 8px 0;
 }
-#pages-div-1 > h2 {
+#my-works-div-1 > h2 {
     margin: 0;
     text-align: center;
     width: 720px;
 }
-.page-list {
+.link-list {
     align-items: center;
     cursor: pointer;
     display: flex;
@@ -20,24 +20,24 @@
     width: 100%;
     -webkit-tap-highlight-color: transparent;
 }
-.page-list > a {
+.link-list > a {
     color: var(--black);
     font-size: larger;
     padding: 8px;
     text-decoration: none;
     width: 600px;
 }
-.page-list > a:hover {
+.link-list > a:hover {
     text-decoration: underline;
 }
 @media (max-width: 800px) {
-    #pages-div-1, #pages-div-1 > h2 {
+    #my-works-div-1, #my-works-div-1 > h2 {
         align-items: center;
         display: flex;
         flex-direction: column;
         width: calc(100% - 32px);
     }
-    .page-list > a {
+    .link-list > a {
         width: 100%;
     }
 }
