--- a/home.css
+++ b/home.css
@@ -28,7 +28,7 @@
     flex-direction: column;
     gap: 16px;
     max-width: 720px;
-    padding: 16px;
+    padding: 16px 0;
 }
 #home-div-1 > div {
     display: flex;
@@ -108,6 +108,7 @@
 .activity {
     background-color: var(--secondary-color);
     border-radius: 16px;
+    margin: 0 16px;
     padding: 16px;
 }
 .activity > h2 {
