--- a/my_works.css
+++ b/my_works.css
@@ -90,7 +90,7 @@
     display: flex;
     gap: 16px;
     overflow-x: scroll;
-    padding: 16px 16px 0 16px;
+    padding: 0 16px;
     scrollbar-width: none;
     width: 100%;
 }
@@ -101,6 +101,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 16px 0 0 0;
     padding: 16px;
     width: auto;
 }
