--- a/home.css
+++ b/home.css
@@ -1,54 +1,90 @@
 .home {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 .home > div {
     width: 100%;
 }
 #home-div-1 {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 16px;
-    justify-content: space-evenly;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     max-width: 720px;
     padding: 0 16px;
 }
 #home-div-2 {
     background-color: var(--secondary-color);
     border-radius: 16px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 16px;
     max-width: 720px;
     padding: 16px;
 }
 #home-div-3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 16px;
     max-width: 720px;
     padding: 16px 0;
 }
 #home-div-1 > div {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 16px;
     padding: 16px 0;
 }
 #home-div-2 > div {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 #home-div-3 > div {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 #home-div-1 > div > *, #home-div-2 > div > h2, #home-div-3 > div > * {
     margin: 0;
     width: 100%;
 }
 #home-div-1 > div > h1, #home-div-1 > div > h2, #home-div-1 > div > p, #home-div-2 > div > h2, #home-div-2 > div > div > h2, #home-div-2 > div > div > p {
-    hyphens: auto;
+    -webkit-hyphens: auto;
+            hyphens: auto;
     margin: 0;
     overflow-wrap: break-word;
     -ms-hyphens: auto;
@@ -59,14 +95,20 @@
     width: 240px;
 }
 #home-div-1 > div > div {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 16px;
 }
 #home-div-1 > div > div > a, #home-div-1 > div > div > div {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border: solid var(--tertiary-color) 2px;
     border-radius: 8px;
     cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding: 12px 16px;
     text-align: center;
@@ -91,17 +133,28 @@
     text-align: center;
 }
 #home-div-2 > div > div {
-    align-items: start;
-    justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 #home-div-2 > div > div:last-child {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 8px;
     padding: 0 16px;
 }
 #home-div-2 > div > div > img {
-    align-self: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
     border-radius: 12px;
     width: 150px;
 }
@@ -116,18 +169,28 @@
     border-radius: 12px;
 }
 .images-container {
+    display: -ms-grid;
     display: grid;
     gap: 16px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     padding-top: 16px;
 }
 .images-container > div {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     background-color: var(--dark-secondary-color);
     border-radius: 12px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding: 16px;
     width: 100%;
 }
@@ -148,7 +211,10 @@
         width: 100%;
     }
     #home-div-1 {
-        flex-direction: column-reverse;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: reverse;
+            -ms-flex-direction: column-reverse;
+                flex-direction: column-reverse;
         gap: 0;
         padding: 16px 0;
     }
@@ -157,11 +223,15 @@
         width: calc(100% - 32px);
     }
     #home-div-1 > div {
-        align-items: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         text-align: center;
     }
     #home-div-1 > div > div {
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
     #home-div-2 > div > div > img {
         width: 100px;
